tests/basic/assert/lam_assert_false_08.pan.out
tests/basic/assert/lam_assert_false_08.pan:4:1-4: error: unable to verify type of f10
tests/basic/assert/lam_assert_false_08.pan:7:1-4: error: unable to verify type of f11
tests/basic/assert/lam_assert_false_08.pan:10:1-4: error: unable to verify type of f12
tests/basic/assert/lam_assert_false_08.pan:13:1-4: error: unable to verify type of f13